syntax = "proto3";

package api.clock;

option go_package="github.com/synerex/synerex_alpha/api/simulation/clock";
//import "common/common.proto";

message ClockService {
    MessageType message_type = 1;
    uint32 time = 2;
    ClockType clock_type = 3;
    uint32 num_cycle = 4;
    StatusType status_type = 5;
}

message ClockInfo {
    MessageType message_type = 1;
    uint32 time = 2;
    ClockType clock_type = 3;
    uint32 num_cycle = 4;
    StatusType status_type = 5;
}

message SetClock {
    MessageType message_type = 1;
    uint32 time = 2;
    ClockType clock_type = 3;
    uint32 num_cycle = 4;
	uint32 cycle_duration = 5;	
	uint32 cycle_time = 6;
    StatusType status_type = 7;
}

message ClockStatus{
    MessageType message_type = 1;
    uint32 time = 2;
    StatusType status_type = 3;
	string meta = 4;
	ClockType clockType = 5;
}

enum ClockType {
    FORWARD = 0;
    BACK = 1;
    SET = 2;
}

enum StatusType {
    OK = 0;
    NG = 1;
}

enum MessageType {
    SET_CLOCK = 0;
    CLOCK_INFO = 1;
    CLOCK_STATUS = 2;
}

